--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,11 @@ services:
     container_name: uptimium
     restart: unless-stopped
     ports:
-      - "5000:5000"
+      - "127.0.0.1:8150:5000"
     volumes:
       - .:/app
-      - uptimium_data:/app/data
+      - ./config:/app/config
     environment:
-      - TZ=Europe/Moscow
       - FLASK_APP=app.py
       - FLASK_ENV=production
     networks:
