feat(monitoring): add API endpoint for service availability and UI enhancements
- Added new /api/availability endpoint for quick service status checks
- Implemented rate limiting (60 requests/minute) for all API endpoints
- Added text shadow customization for monitor cards
- Added support for custom colors in monitor display settings
- Improved error handling and logging for configuration reloads
- Updated monitor card styling with customizable text and background colors
- Added documentation for new configuration options
- Enhanced security with proper rate limiting on all endpoints

--- a/config/monitors.yml
+++ b/config/monitors.yml
@@ -14,6 +14,12 @@ monitors:
       show_target: false
       show_type: false
       show_response_time: true
+      # Custom colors (optional)
+      header_text: "#ff00ff"
+      text_color: "#00ff00"
+      data_color: "#ff0000"
+      # Text shadow settings (optional)
+      text_shadow: "2px 2px 4px rgba(0, 0, 0, 0.5)"  # horizontal-offset vertical-offset blur-radius color
 
   # TCP Service Monitor
   ssh_service:
